solo falta la seccion de productos

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </p>
                         <p>
                             <strong>
-                                “DESCUBRE QUIEN ERES PARA CREAR EL ÉXITO A TU MEDIDA"
+                                "DESCUBRE QUIEN ERES PARA CREAR EL ÉXITO A TU MEDIDA"
                                 <p>
                                     ---- SI NO ESTAS OBSESIONADA CON TU VIDA ENTONCES CAMBIALA ----
                                 </p>
@@ -110,20 +110,26 @@
                     <h2 class="section-heading text-uppercase">Asesorias</h2>
                 </div>
                 <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i></span>
+                    <div class="col-md-4 d-flex justify-content-center align-items-center flex-column">
+                        <span class="asesorias">
+                            <img src="assets/img/ll.svg">
+                        </span>
                         <h4 class="my-3">Ellestylemechellange</h4>
                         <p class="text-muted"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, impedit enim. Cumque earum enim sint, odio, nemo vel, quod alias numquam inventore ipsa reprehenderit, velit impedit ipsam? Iure, voluptate asperiores.</span></p>
                         <button class="btn btn-primary btn-block">Ver Más</button>
                     </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-laptop fa-stack-1x fa-inverse"></i></span>
+                    <div class="col-md-4 d-flex justify-content-center align-items-center flex-column">
+                        <span class="asesorias">
+                            <img src="assets/img/ds.svg">
+                        </span>
                         <h4 class="my-3">Diseña tu imagen a tu medida</h4>
                         <p class="text-muted"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum nostrum qui atque corporis expedita tenetur saepe dolorum debitis, ab, numquam non suscipit voluptates laborum libero, corrupti fugit laudantium quaerat provident.</span></p>
                         <button class="btn btn-primary btn-block">Ver Más</button>
                     </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-lock fa-stack-1x fa-inverse"></i></span>
+                    <div class="col-md-4 d-flex justify-content-center align-items-center flex-column">
+                        <span class="asesorias">
+                            <img src="assets/img/tc.svg">
+                        </span>
                         <h4 class="my-3">Tipologia Corporal</h4>
                         <p class="text-muted"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa esse sequi, veritatis vitae reprehenderit ea incidunt pariatur id! Pariatur fugiat dicta quia, rem, similique necessitatibus libero. Consectetur sequi, accusantium placeat.</span></p>
                         <button class="btn btn-primary btn-block">Ver Más</button>
