add section Testimonios

--- a/index.html
+++ b/index.html
@@ -171,39 +171,99 @@
                 <div class="row">
                     <div class="col-lg-12" id="testimonialsCarousel">
                         <div>
-                            <img src="assets/img/team/1.jpg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/karlameneses.jpeg" class="img-fluid testimonialsImg">
                             <h2>
-                                Nombre Apellido
+                                Karla Meneses
                             </h2>
                             <p class="text-center">
-                                "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat."
+                                "Elle! mi vida muchas gracias, Amo tu trabajo, eres súper profesional, tienes los mejores productos, eres la mejor energía me siento feliz por el cambio tan hermoso que logras en mi mirada, es una bendición contar con personas como TU 🙌 gracias Elenny."
                             </p>
                         </div>
                         <div>
-                            <img src="assets/img/team/1.jpg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/kellyherrera.jpeg" class="img-fluid testimonialsImg">
                             <h2>
-                                Nombre Apellido
+                                Kelly Herrera
                             </h2>
                             <p class="text-center">
-                                "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat."
+                                "Conocer a Elenny como mi instructora de Pole dance en el 2014 cambio mi vida por completo. Ella es la una Diosa empoderada de si misma y su seguridad. Su influencia despertó mi pasión por el Pole dance y por la feminidad que tenía dormida en un mundo tan competitivo donde me había olvidado de que ser mujer es uno de mis súper poderes 👠🌹. Aún ella es un icono en mi vida que representa la abundancia y  la feminidad 🛍👡👑"
                             </p>
                         </div>
                         <div>
-                            <img src="assets/img/team/1.jpg" class="img-fluid testimonialsImg">
+                            <img src="assets/img/testimonios/darling.jpeg" class="img-fluid testimonialsImg">
                             <h2>
-                                Nombre Apellido
+                                Darling Rodriguez
                             </h2>
                             <p class="text-center">
-                                "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat."
+                                "Elenny, para mi fue una experiencia brutal.. ver cómo me veía tan HERMOSA, que resaltaban mis ojos y siempre verme como que si estuviese maquillada ,que con solo un maquillaje sencillo y rápido me viera súper WOW ! fue genial... Incluso fuiste la que me dio confianza de colocármelas! ya que No todo el mundo sabe hacerlo... Pero contigo fue diferente, Gracias por eso 🥰😘"
+                            </p>
+                        </div>
+                        <div>
+                            <img src="assets/img/testimonios/danielaramirez.jpeg" class="img-fluid testimonialsImg">
+                            <h2>
+                                Daniela Ramírez
+                            </h2>
+                            <p class="text-center">
+                                "Mis inicios con las pestañas fue contigo , desde entonces no he encontrado una mejor que tú .. Realzaste mi mirada! Por eso siempre donde estés te busco te persigo jajaja Porq no hay otra igual! Eres tan delicada , perfeccionista y eso me encanta .. Realizas un excelente trabajo y por supuesto con los mejores materiales , material de calidad y eso habla por si solo.. Yo lo admito no puedo vivir sin mis pestañas .. Es un accesorio más que en mi no puede faltar! ME ENCANTAN!!"
+                            </p>
+                        </div>
+                        <div>
+                            <img src="assets/img/testimonios/lannyespinal.jpeg" class="img-fluid testimonialsImg">
+                            <h2>
+                                Lany Espinal
+                            </h2>
+                            <p class="text-center">
+                                "Elleeeee bella si eres lo máximo !! Quedé fascinada con lo que me hiciste !! Con muchas ganas de hacerlo nuevamente, desearía lucir así para siempre jejeje 🤩"
+                            </p>
+                        </div>
+                        <div>
+                            <img src="assets/img/testimonios/carolinarojas.jpeg" class="img-fluid testimonialsImg">
+                            <h2>
+                                Carolina Rojas
+                            </h2>
+                            <p class="text-center">
+                                "Elenny, estoy muy agradecida por tus excelente servicios. La verdad excelente persona y con mucha paciencia para enseñar tu profesión! Desde el  principio supe que no sería fácil pero me diste esperanzas y motivación para seguir aprendiendo y dar un pasó más en el mundo de la belleza, muy espléndido tu trabajo! Tus teoría muy claras, hubo muchos retos, pero siempre brindando confianza y motivación para aprender y ser una profesional como TÚ! me has dejado mucha experiencia y conocimientos y con más ganas de continuar en el fascinante mundo de la belleza!"
+                            </p>
+                        </div>
+                        <div>
+                            <img src="assets/img/testimonios/honadiaz.jpeg" class="img-fluid testimonialsImg">
+                            <h2>
+                                Hona Díaz
+                            </h2>
+                            <p class="text-center">
+                                "Elle! la mejor !!! Con esa capacidad para despertar entusiasmo,   motivación y transformando desde adentro hacia afuera y siempre innovando!!! Bella amiga y sencillamente excelente 😘❤️"
+                            </p>
+                        </div>
+                        <div>
+                            <img src="assets/img/testimonios/NhabylaGreige.jpeg" class="img-fluid testimonialsImg">
+                            <h2>
+                                Nhabyla Greige
+                            </h2>
+                            <p class="text-center">
+                                "Hola bella! Un trabajo impecable, altamente capacitada y preparada y amable atención. 😘😘😘"
+                            </p>
+                        </div><div>
+                            <img src="assets/img/testimonios/faltanombre.jpeg" class="img-fluid testimonialsImg">
+                            <h2>
+                                ...
+                            </h2>
+                            <p class="text-center">
+                                "Mi testimonio es genuino, gracias al trabajo impecable que has realizado en las oportunidades que hemos tenido no sólo con la extensión de las pestañas sino con el lifting. Tú profesionalismo siempre a la vanguardia de la excelencia y por ende los productos que usas para trabajar. Muchas gracias por ofrecer tan  extraordinario servicio. Ha sido una grata experiencia. Sin duda eres una referencia local importante."
+                            </p>
+                        </div><div>
+                            <img src="assets/img/testimonios/MarthaNunez.jpeg" class="img-fluid testimonialsImg">
+                            <h2>
+                                Martha Núñez
+                            </h2>
+                            <p class="text-center">
+                                "Querida Elle Me siento super afortunada de haberte conocido porque más allá de ser la persona ideal para el cuidado de mis Cejas y pestañas donde  deposito toda mi confianza en tus manos porque Con un mucho profesionalismo realizas un trabajo impecable , detallista , con materiales de primera calidad y siempre me dejas una Sonrisa dibujada en la Cara satisfecha por los resultados naturales  delicados que tanto me gustan, puedo agregar que eres una maestra para explicar y asesorar en este tema. Por otro lado debo resaltar que eres una mujer fabulosa por dentro y por fuera en todos los aspectos. Gracias por tu dedicación y que ese rato  Que voy para allá me la paso increíble ... Besitos"
+                            </p>
+                        </div><div>
+                            <img src="assets/img/testimonios/IreneRosales.jpeg" class="img-fluid testimonialsImg">
+                            <h2>
+                                Irene Rosales
+                            </h2>
+                            <p class="text-center">
+                                "Elenny Tu curso de Maquillaje fue genial. Contigo aprendí a maquillarme y cuidar mi piel antes y después del maquillaje. También me coloqué las extensiones de pestañas y me encantaron! muy naturales. Repetiría sin duda alguna. La mejor. Me encantaría tenerte aquí en Espana amiga. Muchísima suerte."
                             </p>
                         </div>
                     </div>
