add new photos testimonios

--- a/index.html
+++ b/index.html
@@ -256,6 +256,22 @@
                             <p class="text-center">
                                 "Elenny Tu curso de Maquillaje fue genial. Contigo aprendí a maquillarme y cuidar mi piel antes y después del maquillaje. También me coloqué las extensiones de pestañas y me encantaron! muy naturales. Repetiría sin duda alguna. La mejor. Me encantaría tenerte aquí en Espana amiga. Muchísima suerte."
                             </p>
+                        </div><div>
+                            <img src="assets/img/testimonios/testi.jpg" class="img-fluid testimonialsImg">
+                            <h2>
+                                Shirley Marcano
+                            </h2>
+                            <p class="text-center">
+                                "Elenny hermosa, eres la única persona el cual puedo confiarle mis pestañas, haces magia con ellas y permites que mi mirada sea otra. Haces de lo corriente, perfección. No hay palabras que puedan definir lo increíble que eres en tu labor, dedicada,apasionada, y sobre todo muy responsable! como persona excelente. Tu atención, la mejorrrr, por eso me complace ser tu clienta, y me haría las pestañas contigo una y otra vez. 🙏"
+                            </p>
+                        </div><div>
+                            <img src="assets/img/testimonios/testi2.jpg" class="img-fluid testimonialsImg">
+                            <h2>
+                                ...
+                            </h2>
+                            <p class="text-center">
+                                "Elenny maneja con profesionalismo y calidad la técnica del embellecimiento de la mirada. Explora constantemente nuevas y mejores formas de empoderar la belleza de lo femenino."
+                            </p>
                         </div>
                     </div>
                 </div>
