resstructuracion del sitio

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <div class="container-fluid mx-0 px-0">
                 <div class="row">
                     <div class="col-sm-4">
-                        <img src="assets/img/imageEbook.jpg" alt="imageEbook" class="img-fluid">
+                        <img src="assets/img/imageEbook.png" alt="imageEbook" class="img-fluid imageEbook">
                     </div>
                     <div class="col-sm-4 ebookText">
-                        <p>Descarga mi ebook</p> <p>"Guapa todos los dias"</p> <p>GRATIS</p>
+                        <span id="title1">Descarga mi ebook</span> <span id="title2">"Guapa todos los dias"</span> <span id="title3">Gratis</span>
                     </div>
                     <div class="col-sm-4" id="ebookDiv">
                         <form action="" id="ebookForm" novalidate="novalidate" class="my-5 w-90">
@@ -86,21 +86,33 @@
                     <div class="col-lg-6"><img src="assets/img/aboutMe.jpg" alt="imageAboutMe" class="img-fluid"></img></div>
                     <div class="col-lg-6 aboutMe">
                         <p>
-                            Soy <strong>Elle</strong>, coach de estilo y me dedico a ayudar a las mujeres a desarrollar su estilo personal para lograr independencia personal y profesional por medio de la auto confianza y el bienestar.
+                            Soy <strong>Elle</strong>, <strong>coach de estilo</strong> y me dedico a ayudar a las mujeres a desarrollar su <strong>estilo personal</strong> para lograr independencia personal y profesional por medio de la auto confianza y el bienestar.
                         </p>
-                        <p>
-                            Desde que tengo uso de razón me he sentido conectada con la belleza sin estridencias y en esa búsqueda me prepare en sus diferentes áreas, incluyendo el mejoramiento físico y la belleza interna, por lo que he decidido usar mi preparación para ayudar a otras mujeres a encaminarse en la búsqueda de su independencia a través de la motivación, la auto confianza y el bienestar, guiándolas en la estructura de una imagen personal que la respalde en la consecusión de sus metas.
+                        <p id="phrase">
+                        	FRASE
                         </p>
-                        <p>
+                        <p id="phraseP">
                             <strong>
                                 "DESCUBRE QUIEN ERES PARA CREAR EL ÉXITO A TU MEDIDA"
-                                <p>
+                                <p id="notColor">
                                     ---- SI NO ESTAS OBSESIONADA CON TU VIDA ENTONCES CAMBIALA ----
                                 </p>
                             </strong>
                         </p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="page-section p-5 my-5" id="miporque">
+        	<div class="container-fluid mx-0 px-0">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase textWhite">Mi Porque</h2>
+                </div>
+            </div>
+            <div class="row miporqueText">
+            	<p>
+				    Desde que tengo uso de razón me he sentido conectada con la belleza sin estridencias y en esa búsqueda me prepare en sus diferentes áreas, incluyendo el mejoramiento físico y la belleza interna, por lo que he decidido usar mi preparación para ayudar a otras mujeres a encaminarse en la búsqueda de su independencia a través de la motivación, la auto confianza y el bienestar, guiándolas en la estructura de una imagen personal que la respalde en la consecusión de sus metas.
+				</p>
             </div>
         </section>
         <!-- Asesorias-->
@@ -154,10 +166,10 @@
             </div>
         </section>
         <!-- Testimonios-->
-        <section class="page-section p-0 my-5" id="testimonios">
+        <section class="page-section py-2 m-0" id="testimonios">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Testimonios</h2>
+                    <h2 class="section-heading text-uppercase textWhite">Testimonios</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-12" id="testimonialsCarousel">
@@ -278,7 +290,7 @@
             </div>
         </section>
         <!-- Contacto-->
-        <section class="page-section py-3 my-5" id="contacto">
+        <section class="page-section py-3 m-0" id="contacto">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contacto</h2>
